force-app/main/default/objects/Activity/fields/nitzap20__Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__Contact_Source__c</fullName>
    <formula>IF(
  ISBLANK(nitzap20__DateTime_First_Message_Received__c) &amp;&amp; ISBLANK(nitzap20__DateTime_First_Message_Sent__c),
  &quot;UNKNOWN&quot;,

IF(ISBLANK(nitzap20__DateTime_First_Message_Received__c),
  &quot;OUTBOUND&quot;,

IF(ISBLANK(nitzap20__DateTime_First_Message_Sent__c),
  &quot;INBOUND&quot;,

IF(nitzap20__DateTime_First_Message_Received__c &lt;= nitzap20__DateTime_First_Message_Sent__c,
  &quot;INBOUND&quot;,

  &quot;OUTBOUND&quot;)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nitzap Contato Inicial</label>
    <type>Text</type>
</CustomField>