force-app/main/default/objects/Activity/fields/nitzap20__DataTime_Sent_Message__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__DataTime_Sent_Message__c</fullName>
    <label>Nitzap: Data Envio Mensagem</label>
    <type>DateTime</type>
</CustomField>