force-app/main/default/objects/Activity/fields/nitzap20__Date_Time_Start_Chat__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__Date_Time_Start_Chat__c</fullName>
    <label>Nitzap: Data Inicio do Historico</label>
    <type>DateTime</type>
</CustomField>