force-app/main/default/objects/Activity/fields/nitzap20__DateTime_First_Message_Received__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__DateTime_First_Message_Received__c</fullName>
    <label>Nitzap Date Time First Message Received</label>
    <type>DateTime</type>
</CustomField>