force-app/main/default/objects/Activity/fields/nitzap20__DateTime_Schedule_Message__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__DateTime_Schedule_Message__c</fullName>
    <label>Nitzap: Data Agendamento</label>
    <type>DateTime</type>
</CustomField>