force-app/main/default/objects/Activity/fields/nitzap20__Nitzap_Task__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__Nitzap_Task__c</fullName>
    <formula>if( 
   ( not isnull( nitzap20__DateTime_Schedule_Message__c ) || not isnull(  nitzap20__Date_Time_Start_Chat__c  ) ) , 

true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nitzap Task</label>
    <type>Checkbox</type>
</CustomField>