force-app/main/default/objects/Activity/fields/nitzap20__Template__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nitzap: Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>nitzap20__Template__c.nitzap20__Type__c</field>
            <operation>equals</operation>
            <value>Template</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>nitzap20__Template__c</referenceTo>
    <relationshipLabel>Atividades</relationshipLabel>
    <relationshipName>Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>