force-app/main/default/objects/Activity/fields/nitzap20__Total_Messages_Sent__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__Total_Messages_Sent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nitzap Total Mensagens Enviadas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>