force-app/main/default/objects/Activity/fields/ScheduledJobId__c.field-meta.xml
<CustomField>
    <fullName>ScheduledJobId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>ScheduledJobId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>