force-app/main/default/objects/Activity/fields/Tipo_de_Contato__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Contato__c</fullName>
    <formula>IF(
    AND(NOT(ISBLANK(WhatId)), BEGINS(WhatId, &quot;006&quot;)),
    &quot;Oportunidade&quot;,
    IF(
        BEGINS(WhoId, &quot;00Q&quot;),
        &quot;Lead&quot;,
        IF(
            BEGINS(WhoId, &quot;003&quot;),
            &quot;Contact&quot;,
            &quot;Outro&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Contato</label>
    <type>Text</type>
</CustomField>